Updating checkbox styles to Bootstrap 3

--- a/src/app/panels/bettermap/editor.html
+++ b/src/app/panels/bettermap/editor.html
@@ -48,10 +48,10 @@
 
   <div class="row">
     <div class="col-md-3">
-      <form>
-        <h6>Auto Fit Bounds</h6>
-        <input type="checkbox" class="form-control input-small" ng-model="panel.fitBoundsAuto" ng-checked="panel.fitBoundsAuto">
-      </form>
+      <div class="checkbox">
+        <label><input type="checkbox" ng-model="panel.fitBoundsAuto" ng-checked="panel.fitBoundsAuto">
+          Auto Fit Bounds</label>
+      </div>
     </div>
     <div class="col-md-4">
       <form>
