--- a/src/app/panels/column/panelgeneral.html
+++ b/src/app/panels/column/panelgeneral.html
@@ -6,6 +6,6 @@
       <label>Height</label> <input type="text" class="form-control input-mini" ng-model='panel.height'></input>
     </div>
     <div class="col-md-1"> 
-      <label> Editable </label><input type="checkbox" class="form-control" ng-model="panel.editable" ng-checked="panel.editable">
+      <label><input type="checkbox" ng-model="panel.editable" ng-checked="panel.editable"> Editable </label>
     </div>
   </div>
