--- a/src/app/panels/derivequeries/editor.html
+++ b/src/app/panels/derivequeries/editor.html
@@ -17,7 +17,7 @@
       <input array-join type="text" class="form-control" style="width:90%" ng-change="set_refresh(true)" ng-model='panel.exclude'></input>
     </div>
     <div class="col-md-1">
-      <label> Rest </label><input type="checkbox" class="form-control" ng-model="panel.rest" ng-checked="panel.rest" ng-change="set_refresh(true)">
+      <label><input type="checkbox" ng-model="panel.rest" ng-checked="panel.rest" ng-change="set_refresh(true)"> Rest </label>
     </div>
   </div>
 </div>
