--- a/src/app/panels/force/editor.html
+++ b/src/app/panels/force/editor.html
@@ -36,17 +36,17 @@
 <div class="row">
   <div class="col-md-3">
     <h6>Spheres</h6>
-    <input type="checkbox" class="form-control input-medium" ng-model="panel.spheres" ng-change="set_refresh(true)">
+    <input type="checkbox" class="input-medium" ng-model="panel.spheres" ng-change="set_refresh(true)">
   </div>
 </div>
 <div class="row">
   <div class="col-md-3">
     <h6>Mute Category 1</h6>
-    <input type="checkbox" class="form-control input-medium" ng-model="panel.mute_category_1" ng-change="set_refresh(true)">
+    <input type="checkbox" class="input-medium" ng-model="panel.mute_category_1" ng-change="set_refresh(true)">
   </div>
   <div class="col-md-3">
     <h6>Mute Category 2</h6>
-    <input type="checkbox" class="form-control input-medium" ng-model="panel.mute_category_2" ng-change="set_refresh(true)">
+    <input type="checkbox" class="input-medium" ng-model="panel.mute_category_2" ng-change="set_refresh(true)">
   </div>
 </div>
 <div class="row">
