--- a/src/app/panels/fullTextSearch/editor.html
+++ b/src/app/panels/fullTextSearch/editor.html
@@ -21,11 +21,11 @@
 <div class="row">
     <!--     <div class="col-md-1">
         <h6>Header</h6>
-        <input type="checkbox" class="form-control" ng-model="panel.header" ng-checked="panel.header">
+        <input type="checkbox" ng-model="panel.header" ng-checked="panel.header">
     </div> -->
     <div class="col-md-1">
         <h6>Sorting</h6>
-        <input type="checkbox" class="form-control" ng-model="panel.sortable" ng-checked="panel.sortable">
+        <input type="checkbox" ng-model="panel.sortable" ng-checked="panel.sortable">
     </div>
     <div class="col-md-3" style="white-space:nowrap" ng-show='panel.sortable'>
         <h6>Sort</h6>
