--- a/src/app/panels/query/editor.html
+++ b/src/app/panels/query/editor.html
@@ -8,6 +8,6 @@
 	    <label>
 	        Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
 	    </label>
-	    <input type="checkbox" class="form-control" ng-model="panel.spyable" ng-checked="panel.spyable">
+	    <input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
 	</div>
 </div>
