--- a/src/app/panels/scatterplot/editor.html
+++ b/src/app/panels/scatterplot/editor.html
@@ -85,7 +85,7 @@
 </div>
 <div class="row">
     <div class="col-md-2">
-        <label>Enable</label><input type="checkbox" class="form-control" ng-model="panel.refresh.enable"
+        <label>Enable</label><input type="checkbox" ng-model="panel.refresh.enable"
                                                   ng-checked="panel.refresh.enable">
     </div>
     <div class="col-md-4">
