--- a/src/app/panels/table/fields.html
+++ b/src/app/panels/table/fields.html
@@ -16,6 +16,6 @@
 <div class="row">
   <div class="col-md-5">
     <h6>Calculate Top Field Values From All Data <tip placement="right">Select this if you want to calculate the top field values from all events in Solr using facet query. The fields that are shown on this page will be used for calculation. Notes that this can significantly impact your performance.</tip></h6>
-    <input type="checkbox" class="form-control" ng-model="panel.calcTopFieldValuesFromAllData" ng-checked="panel.calcTopFieldValuesFromAllData" ng-change="set_refresh(true)">
+    <input type="checkbox" ng-model="panel.calcTopFieldValuesFromAllData" ng-checked="panel.calcTopFieldValuesFromAllData" ng-change="set_refresh(true)">
   </div>
 </div>
