--- a/src/app/panels/timepicker/editor.html
+++ b/src/app/panels/timepicker/editor.html
@@ -22,7 +22,7 @@
 <div class="row">
   <h5>Auto-refresh <small>settings</small></h5>  
   <div class="col-md-1">
-    <label> Enable </label><input type="checkbox" class="form-control" ng-model="panel.refresh.enable" ng-checked="panel.refresh.enable">
+    <label><input type="checkbox" ng-model="panel.refresh.enable" ng-checked="panel.refresh.enable"> Enable </label>
   </div>
   <div class="col-md-4">
     <label> Interval (seconds) </label>
