--- a/src/app/partials/dashLoader.html
+++ b/src/app/partials/dashLoader.html
@@ -146,7 +146,7 @@
             <form class="form-inline">
                 <ul class="list-unstyled">
                     <li>
-                        <label class="checkbox"><input type="checkbox" class="form-control" ng-model="dashboard.current.loader.save_as_public">
+                        <label class="checkbox"><input type="checkbox" ng-model="dashboard.current.loader.save_as_public">
                             Make Public? <tip>If checked, the dashboard will be shared with everyone.</tip>
                         </label>
                     </li>
