--- a/src/app/partials/dasheditor/solr.html
+++ b/src/app/partials/dasheditor/solr.html
@@ -10,7 +10,7 @@
 </div>
 <form name="solrForm">
     <div>
-        <strong>Use Fusion?</strong><input type="checkbox" class="form-control" ng-model="config.USE_FUSION" style="vertical-align: top;">
+        <strong>Use Fusion?</strong><input type="checkbox" ng-model="config.USE_FUSION" style="vertical-align: top;">
     </div>
     <div class="row">
         <div class="col-md-7">
