--- a/src/app/partials/querySelect.html
+++ b/src/app/partials/querySelect.html
@@ -27,8 +27,10 @@
 <div class="row">
   <div>
       <div class="col-md-8" >
-        <label> Display query when Inspect</label>
-        <input type="checkbox" class="form-control" ng-model="panel.show_queries" ng-checked="panel.show_queries" style="float:left;margin-right: 10px;">
+        <div class="checkbox">
+          <label><input type="checkbox" ng-model="panel.show_queries" ng-checked="panel.show_queries" style="float:left;margin-right: 10px;">
+            Display query when Inspect</label>
+        </div>
       </div>
   </div>
   <div class="col-md-12" style="margin-left:0px">
