--- a/src/app/partials/roweditor/panels.html
+++ b/src/app/partials/roweditor/panels.html
@@ -21,7 +21,7 @@
           </td>
           <td><i ng-click="_.move(row.panels,$index,$index+1)" ng-hide="$last"
               class="pointer icon-arrow-down"></i></td>
-          <td><input type="checkbox" class="form-control" ng-model="panel.hide" ng-checked="panel.hide"></td>
+          <td><input type="checkbox" ng-model="panel.hide" ng-checked="panel.hide"></td>
         </tr>
       </table>
     </div>
