--- a/src/app/partials/solrSettings.html
+++ b/src/app/partials/solrSettings.html
@@ -3,9 +3,8 @@
         <div class="modal-content">
             <div class="editor-title modal-header">New Dashboard Settings</div>
             <div class="modal-body">
-        <div>
-            <label>Use Fusion?</label>
-            <input type="checkbox" class="form-control" ng-model="new.USE_FUSION" style="vertical-align: top;">
+        <div class="checkbox">
+            <label><input type="checkbox" ng-model="new.USE_FUSION" style="vertical-align: top;">Use Fusion?</label>
         </div>
         <div class="row">
             <div class="col-md-7">
