--- a/src/app/panels/rangeFacet/module.html
+++ b/src/app/panels/rangeFacet/module.html
@@ -22,19 +22,19 @@
   <form class="form-inline bordered histogram-options" ng-show="options">
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.bars" ng-checked="panel.bars" ng-change="render()">
+        <input type="checkbox" ng-model="panel.bars" ng-checked="panel.bars" ng-change="render()">
         Bars
       </label>
     </span>
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.lines" ng-checked="panel.lines" ng-change="render()">
+        <input type="checkbox" ng-model="panel.lines" ng-checked="panel.lines" ng-change="render()">
         Lines
       </label>
     </span>
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.points" ng-checked="panel.points" ng-change="render()">
+        <input type="checkbox" ng-model="panel.points" ng-checked="panel.points" ng-change="render()">
         Points
       </label>
     </span>
