--- a/src/app/panels/table/pagination.html
+++ b/src/app/panels/table/pagination.html
@@ -1,6 +1,6 @@
   <div class="row">
     <div class="col-md-3"> 
-      <h6>Show Controls</h6><input type="checkbox" class="form-control" ng-model="panel.paging" ng-checked="panel.paging">
+      <h6>Show Controls</h6><input type="checkbox" ng-model="panel.paging" ng-checked="panel.paging">
     </div>
     <div class="col-md-2">
       <h6>Overflow</h6>
