--- a/src/app/panels/timeseries/module.html
+++ b/src/app/panels/timeseries/module.html
@@ -18,32 +18,32 @@
   <form class="form-inline bordered timeseries-options" ng-show="options">
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.bars" ng-checked="panel.bars" ng-change="render()">
+        <input type="checkbox" ng-model="panel.bars" ng-checked="panel.bars" ng-change="render()">
         Bars
       </label>
     </span>
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.lines" ng-checked="panel.lines" ng-change="render()">
+        <input type="checkbox" ng-model="panel.lines" ng-checked="panel.lines" ng-change="render()">
         Lines
       </label>
     </span>
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.points" ng-checked="panel.points" ng-change="render()">
+        <input type="checkbox" ng-model="panel.points" ng-checked="panel.points" ng-change="render()">
         Points
       </label>
     </span>
     <span class="checkbox">
       <label>
-        <input type="checkbox" class="form-control" ng-model="panel.stack" ng-checked="panel.stack" ng-change="render()">
+        <input type="checkbox" ng-model="panel.stack" ng-checked="panel.stack" ng-change="render()">
         Stack
       </label>
     </span>
     <span ng-show="panel.stack">
       <div class="checkbox">
         <label style="white-space:nowrap">
-          <input type="checkbox" class="form-control"  ng-model="panel.percentage" ng-checked="panel.percentage" ng-change="render()">
+          <input type="checkbox"  ng-model="panel.percentage" ng-checked="panel.percentage" ng-change="render()">
           Percent
         </label>
       </div>
