--- a/src/app/partials/dasheditor/controls.html
+++ b/src/app/partials/dasheditor/controls.html
@@ -1,55 +1,77 @@
 <div ng-controller="dashLoader">
     <div class="row">
-        <div class="col-md-6" style="font-weight:bold;"><label>Show Collections Picker</label>
-            <input type="checkbox" class="form-control" ng-model="dashboard.current.loader.dropdown_collections"
-                ng-checked="dashboard.current.loader.dropdown_collections">
+        <div class="col-md-6" style="font-weight:bold;">
+            <div class="checkbox">
+                <label><input type="checkbox" ng-model="dashboard.current.loader.dropdown_collections"
+                    ng-checked="dashboard.current.loader.dropdown_collections">
+                    Show Collections Picker</label>
+            </div>
         </div>
     </div>
     <h5>Allow saving to</h5>
     <div class="row">
         <div class="col-md-2">
-            <label>File</label><input type="checkbox" class="form-control"
-                ng-model="dashboard.current.loader.save_local"
-                ng-checked="dashboard.current.loader.save_local">
+            <div class="checkbox">
+                <label><input type="checkbox"
+                    ng-model="dashboard.current.loader.save_local"
+                    ng-checked="dashboard.current.loader.save_local">File</label>
+            </div>
         </div>
         <div class="col-md-2">
-            <label>Browser</label><input type="checkbox" class="form-control"
-                ng-model="dashboard.current.loader.save_default"
-                ng-checked="dashboard.current.loader.save_default">
+            <div class="checkbox">
+                <label><input type="checkbox"
+                    ng-model="dashboard.current.loader.save_default"
+                    ng-checked="dashboard.current.loader.save_default">Browser</label>
+            </div>
         </div>
         <div class="col-md-2">
-            <label>Gist
-                <tip>Requires your domain to be OAUTH registered with Github</tip>
-            </label><input type="checkbox" class="form-control" ng-model="dashboard.current.loader.save_gist"
-                ng-checked="dashboard.current.loader.save_gist">
+            <div class="checkbox">
+                <label><input type="checkbox" ng-model="dashboard.current.loader.save_gist"
+                    ng-checked="dashboard.current.loader.save_gist">Gist
+                    <tip>Requires your domain to be OAUTH registered with Github</tip>
+                </label>
+            </div>
         </div>
         <div class="col-md-4">
-            <label>Copy to clipboard</label>
-            <input type="checkbox" class="form-control" ng-model="dashboard.current.loader.copy_to_clipboard"
-                ng-checked="dashboard.current.loader.copy_to_clipboard">
+            <div class="checkbox">
+                <label><input type="checkbox" ng-model="dashboard.current.loader.copy_to_clipboard"
+                    ng-checked="dashboard.current.loader.copy_to_clipboard">Copy to clipboard</label>
+            </div>
         </div>
         <div class="col-md-2">
-            <label>Solr</label><input type="checkbox" class="form-control"
-                ng-model="dashboard.current.loader.save_elasticsearch"
-                ng-checked="dashboard.current.loader.save_elasticsearch">
+            <div class="checkbox">
+                <label><input type="checkbox"
+                    ng-model="dashboard.current.loader.save_elasticsearch"
+                    ng-checked="dashboard.current.loader.save_elasticsearch">Solr</label>
+                </div>
         </div>
     </div>
-    <h5>Allow loading from</h5>
     <div class="row">
-        <div class="col-md-2">
-            <label>Local file</label><input type="checkbox" class="form-control"
-                ng-model="dashboard.current.loader.load_local"
-                ng-checked="dashboard.current.loader.load_local">
+        <div class="col-md-12">
+            <h5>Allow loading from</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="checkbox">
+                <label><input type="checkbox"
+                    ng-model="dashboard.current.loader.load_local"
+                    ng-checked="dashboard.current.loader.load_local">Local file</label>
+            </div>
         </div>
         <div class="col-md-2">
-            <label>Gist</label><input type="checkbox" class="form-control"
-                ng-model="dashboard.current.loader.load_gist"
-                ng-checked="dashboard.current.loader.load_gist">
+            <div class="checkbox">
+                <label><input type="checkbox"
+                    ng-model="dashboard.current.loader.load_gist"
+                    ng-checked="dashboard.current.loader.load_gist">Gist</label>
+            </div>
         </div>
         <div class="col-md-2">
-            <label>Solr</label><input type="checkbox" class="form-control"
-                ng-model="dashboard.current.loader.load_elasticsearch"
-                ng-checked="dashboard.current.loader.load_elasticsearch">
+            <div class="checkbox">
+                <label><input type="checkbox"
+                    ng-model="dashboard.current.loader.load_elasticsearch"
+                    ng-checked="dashboard.current.loader.load_elasticsearch">Solr</label>
+            </div>
         </div>
         <div class="col-md-3" ng-show="dashboard.current.loader.load_elasticsearch">
             <label>Solr list size
