--- a/src/app/partials/panelHeader.html
+++ b/src/app/partials/panelHeader.html
@@ -58,7 +58,7 @@
                 <h5>Number of Rows</h5>
                 <form><input type="number" value="panel.exportSize" ng-model="panel.exportSize"
                         placeholder="{{panel.size * panel.pages}}" />
-                    <div ng-show="panel.type=='table'"><input type="checkbox" class="form-control" ng-model="panel.exportAll" /> All Fields
+                    <div ng-show="panel.type=='table'"><input type="checkbox" ng-model="panel.exportAll" /> All Fields
                         <tip>If this option is checked, all fields in the Solr schema will be exported. Otherwise, only
                             the fields that you have selected to appear in your Table view will be exported</tip>
                     </div>
