--- a/src/app/partials/panelgeneral.html
+++ b/src/app/partials/panelgeneral.html
@@ -11,12 +11,14 @@
       <label>Span</label> <select class="form-control input-mini" ng-model="panel.span" ng-options="f for f in [1,2,3,4,5,6,7,8,9,10,11,12]"></select>
     </div>
     <div class="col-md-2">
-      <label>Editable</label><input type="checkbox" class="form-control" ng-model="panel.editable" ng-checked="panel.editable">
+      <div class="checkbox">
+        <label><input type="checkbox" ng-model="panel.editable" ng-checked="panel.editable">Editable</label>
+      </div>
     </div>
     <div class="col-md-2" ng-show="!_.isUndefined(panel.spyable)">
       <label>
         Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
       </label>
-      <input type="checkbox" class="form-control" ng-model="panel.spyable" ng-checked="panel.spyable">
+      <input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
     </div>
   </div>
