--- a/src/app/partials/panelinfo.html
+++ b/src/app/partials/panelinfo.html
@@ -12,7 +12,7 @@
 <div>
   <div class="row">
       <div class="col-md-8" >
-          <input type="checkbox" class="form-control" ng-model="panel.show_help_message" ng-checked="panel.show_help_message" style="float:left;margin-right: 10px;">
+          <input type="checkbox" ng-model="panel.show_help_message" ng-checked="panel.show_help_message" style="float:left;margin-right: 10px;">
           <label> Display help message when Inspect</label>
       </div>
   </div>
