--- a/src/app/panels/text/module.html
+++ b/src/app/panels/text/module.html
@@ -3,7 +3,7 @@
   <markdown ng-show="ready && panel.mode == 'markdown'">
     {{panel.content}}
   </markdown>
-  <p ng-show="panel.mode == 'text'" ng-style='panel.style' ng-bind-html="panel.content | striphtml | newlines">
+  <p ng-show="panel.mode == 'text'" ng-style="panel.style" ng-bind-html="panel.content | striphtml | newlines">
   </p>
   <p ng-show="panel.mode == 'html'" ng-bind-html="panel.content">
   </p>
