Fixing selected fields not visible issue

--- a/src/app/panels/fullTextSearch/editor.html
+++ b/src/app/panels/fullTextSearch/editor.html
@@ -13,7 +13,7 @@
         <h6>Facets
             <small>Click to remove</small>
         </h6>
-        <span style="margin-left:3px" ng-click="remove_facet_field(field)" ng-repeat="field in $parent.panel.fields" class="label pointer remove">{{field}}</span>
+        <span style="margin-left:3px" ng-click="remove_facet_field(field)" ng-repeat="field in $parent.panel.fields" class="pointer remove">{{field}}</span>
     </div>
 </div>
 
