--- a/src/app/panels/table/fields.html
+++ b/src/app/panels/table/fields.html
@@ -10,7 +10,7 @@
   </div>
   <div class="col-md-8">
     <h6>Fields <small>Click to remove</small></h6>
-    <span style="margin-left:3px" ng-click="toggle_important_field(field)" ng-repeat="field in $parent.panel.important_fields" class="label pointer remove">{{field}} </span>
+    <span style="margin-left:3px" ng-click="toggle_important_field(field)" ng-repeat="field in $parent.panel.important_fields" class="pointer remove">{{field}} </span>
   </div>
 </div>
 <div class="row">
