--- a/src/app/panels/table/editor.html
+++ b/src/app/panels/table/editor.html
@@ -10,7 +10,7 @@
   </div>
   <div class="col-md-8">
     <h6>Columns <small>Click to remove</small></h6>
-    <span style="margin-left:3px" ng-click="toggle_field(field)" ng-repeat="field in $parent.panel.fields" class="label pointer remove">{{field}} </span>
+    <span style="margin-left:3px" ng-click="toggle_field(field)" ng-repeat="field in $parent.panel.fields" class="pointer remove">{{field}} </span>
   </div>
 </div>
 <!-- 
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-8">
       <h6>Highlighted fields <small>Click to remove</small></h6>
-      <span style="margin-left:3px" ng-click="toggle_highlight(field);set_refresh(true)" ng-repeat="field in $parent.panel.highlight" class="label remove pointer">{{field}} </span>
+      <span style="margin-left:3px" ng-click="toggle_highlight(field);set_refresh(true)" ng-repeat="field in $parent.panel.highlight" class="remove pointer">{{field}} </span>
     </div>
   </div>
 -->
