--- a/src/app/panels/query/editor.html
+++ b/src/app/panels/query/editor.html
@@ -4,10 +4,11 @@
 	    <select class="form-control input-mini" ng-model="panel.operator"
 	                ng-options="f for f in ['OR', 'AND']" ng-change="set_refresh(true)"></select>
 	</div>
-	<div class="col-md-2">
-	    <label>
-	        Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
-	    </label>
-	    <input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
+	<div class="col-md-3">
+		<div class="checkbox">
+			<label><input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
+				Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
+			</label>
+	    </div>
 	</div>
 </div>
