--- a/src/app/partials/panelgeneral.html
+++ b/src/app/partials/panelgeneral.html
@@ -15,10 +15,11 @@
         <label><input type="checkbox" ng-model="panel.editable" ng-checked="panel.editable">Editable</label>
       </div>
     </div>
-    <div class="col-md-2" ng-show="!_.isUndefined(panel.spyable)">
-      <label>
-        Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
-      </label>
-      <input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
+    <div class="col-md-3" ng-show="!_.isUndefined(panel.spyable)">
+      <div class="checkbox">
+        <label><input type="checkbox" ng-model="panel.spyable" ng-checked="panel.spyable">
+          Inspect <i class="icon-question-sign" bs-tooltip="'Allow query reveal via <i class=icon-eye-open></i>'"></i>
+        </label>
+      </div>
     </div>
   </div>
