Fixing a syntax typo

--- a/src/app/partials/inspector.html
+++ b/src/app/partials/inspector.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" class="btn btn-success" ng-click="$hide()()">Close</button>
+            <button type="button" class="btn btn-success" ng-click="$hide()">Close</button>
         </div>
     </div>
 </div>
