--- a/src/app/partials/paneleditor.html
+++ b/src/app/partials/paneleditor.html
@@ -13,7 +13,7 @@
       
       <div class="modal-footer">
         <!-- close_edit() is provided here to allow for a scope to perform action on $hide() -->
-        <button type="button" class="btn btn-danger" ng-click="editor.index=0;close_edit();$hide()()">Close</button>
+        <button type="button" class="btn btn-danger" ng-click="editor.index=0;close_edit();$hide()">Close</button>
       </div>
     </div>
   </div>
